# casseted-core

./: .gitignore  Cargo.toml  README.md  justfile
assets/reference-images/: README.md
crates/casseted-cli/: Cargo.toml
crates/casseted-gpu/: Cargo.toml
crates/casseted-pipeline/: Cargo.toml
crates/casseted-pipeline/src/: lib.rs  projection.rs  runtime.rs  stage_regression.rs  stages.rs  state.rs  tests.rs
crates/casseted-shaderlib/: Cargo.toml
crates/casseted-signal/: Cargo.toml
crates/casseted-testing/: Cargo.toml
crates/casseted-types/: Cargo.toml
docs/: testing.md
docs/agent-log/: 0001-limited-multi-pass-transition.md  0002-chroma-path-refinement.md  0003-highlight-bleed-and-dropout.md  0004-noise-path-refinement.md  0005-signal-chain-stabilization-review.md  0006-pipeline-state-integrity-and-toolchain-reproducibility.md  0007-compiled-still-runtime-layer.md  0008-luma-path-refinement.md  0009-chroma-path-refinement-v2.md  0010-final-reconstruction-stage-cleanup.md  0011-formal-model-runtime-subset-review.md  0012-chroma-phase-activation.md  0013-head-switching-subset-activation.md  0014-head-switching-status-closure.md  0015-output-transfer-boundary-review.md
docs/architecture/: README.md  crates.md  overview.md  pipeline.md  signal-model-v1-subset.md  signal-model-v1.md  vhs-model-v1.md
docs/decisions/: 0001-workspace-layout.md  0002-shader-and-gpu-foundation.md  0003-first-milestone-scope.md  0004-signal-model-v1.md  0004-vhs-model-v1-foundation.md  README.md
docs/math/: signal-model-v1-formulas.md
docs/reviews/: 0001-review-18-03-2026.md
examples/: README.md
shaders/: signal_preview.wgsl
shaders/debug/: README.md
(+16 files in other folders)
