[workspace]
members = [
    "crates/casseted-types",
    "crates/casseted-signal",
    "crates/casseted-shaderlib",
    "crates/casseted-gpu",
    "crates/casseted-pipeline",
    "crates/casseted-cli",
    "crates/casseted-testing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
authors = ["Casseted contributors"]

[workspace.dependencies]
casseted-types = { path = "crates/casseted-types" }
casseted-signal = { path = "crates/casseted-signal" }
casseted-shaderlib = { path = "crates/casseted-shaderlib" }
casseted-gpu = { path = "crates/casseted-gpu" }
casseted-pipeline = { path = "crates/casseted-pipeline" }
casseted-testing = { path = "crates/casseted-testing" }
wgpu = "0.19.4"
